// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch should pass down any prop of the default component 1`] = `
<h1>
  Default Component
  prop value
</h1>
`;

exports[`Switch should pass down any prop that the matching component receives 1`] = `
<h1>
  Test Archive Component
  prop value
</h1>
`;

exports[`Switch should render the default component if no match was found 1`] = `
<h1>
  Default Component
</h1>
`;

exports[`Switch should render the first component that match 1`] = `
<h1>
  Test Archive Component
</h1>
`;

exports[`Switch should return null if no component match 1`] = `null`;
